--- a/it161/it161/css/main.css
+++ b/it161/it161/css/main.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand|Spectral');
 
 html {
-    background-color: sunglow;
+    background-color: white smoke;
     font-family: 'Quicksand', sans-serif;
     font-size: 0.95em;
     line-height: 1.5em;
