--- a/it161/it161/css/tables.css
+++ b/it161/it161/css/tables.css
@@ -28,6 +28,10 @@ table.audience {
     margin: 40px auto;
 }
 
+table.audience tr: nth-child(even)
+{
+    backgorund-color: #f2f2f2; 
+
 table.audience th {
     width: 33.3%;   
 }
